<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cl.karangop.weekfood.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionTv"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:paddingTop="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_app"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/desc_nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_people"
                android:padding="5dp" />

            <TextView
                android:id="@+id/ex_nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_name"
                android:layout_alignParentRight="true"
                android:padding="5dp" />

            <TextView
                android:id="@+id/desc_dayTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_day"
                android:layout_below="@id/desc_nameTv"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/ex_dayTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_day"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ex_nameTv"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/desc_mixTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_mix"
                android:layout_below="@+id/desc_dayTv"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/ex_mixTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_mix"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/ex_dayTv"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/desc_buttonTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_button"
                android:layout_below="@id/ex_mixTv"
                android:layout_marginBottom="10dp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/desc_pressTv1"
                android:text="@string/press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc_buttonTv"
                android:textSize="20sp"/>


        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
